force-app/main/default/objects/Demande__c/Demande__c.object-meta.xml
<CustomObject>
    <label>Demande</label>
    <nameField>
        <displayFormat>D-{000000}</displayFormat>
        <label>N° de la demande</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Demandes</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>