force-app/main/default/objects/Demande__c/fields/Date_d_envoi__c.field-meta.xml
<CustomField>
    <fullName>Date_d_envoi__c</fullName>
    <label>Date d’envoi</label>
    <type>DateTime</type>
</CustomField>