force-app/main/default/objects/Demande__c/fields/Debut_d_application_de_la_modification__c.field-meta.xml
<CustomField>
    <fullName>Debut_d_application_de_la_modification__c</fullName>
    <description>Mois de début d’application de la modification</description>
    <inlineHelpText>Mois de début d’application de la modification</inlineHelpText>
    <label>Début d’application de la modification</label>
    <type>Date</type>
</CustomField>