force-app/main/default/objects/Demande__c/fields/Facture_directe__c.field-meta.xml
<CustomField>
    <fullName>Facture_directe__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Coût de transport</label>
    <referenceTo>Cout_de_transport__c</referenceTo>
    <relationshipLabel>Demandes</relationshipLabel>
    <relationshipName>Demandes</relationshipName>
    <type>Lookup</type>
</CustomField>