force-app/main/default/objects/Demande__c/fields/Montant_forfait_mensuel_TTC__c.field-meta.xml
<CustomField>
    <fullName>Montant_forfait_mensuel_TTC__c</fullName>
    <label>Montant forfait mensuel TTC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>