force-app/main/default/objects/Demande__c/fields/Prestation_de_transport__c.field-meta.xml
<CustomField>
    <fullName>Prestation_de_transport__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prestation de transport</label>
    <referenceTo>Prestation_de_transport__c</referenceTo>
    <relationshipLabel>Demandes</relationshipLabel>
    <relationshipName>Demandes</relationshipName>
    <type>Lookup</type>
</CustomField>