force-app/main/default/objects/Demande__c/fields/Proposition_Biologistic_validee_jointe__c.field-meta.xml
<CustomField>
    <fullName>Proposition_Biologistic_validee_jointe__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Proposition Biologistic validée jointe</label>
    <type>Checkbox</type>
</CustomField>