force-app/main/default/objects/Demande__c/fields/Proprietaire__c.field-meta.xml
<CustomField>
    <fullName>Proprietaire__c</fullName>
    <formula>Owner:User.FirstName &amp;&quot; &quot;&amp; Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Propriétaire</label>
    <type>Text</type>
</CustomField>