force-app/main/default/objects/Demande__c/fields/Reference_Demande__c.field-meta.xml
<CustomField>
    <fullName>Reference_Demande__c</fullName>
    <label>Réf.Demande</label>
    <length>255</length>
    <type>Text</type>
</CustomField>