force-app/main/default/objects/Demande__c/fields/Type_de_demande__c.field-meta.xml
<CustomField>
    <fullName>Type_de_demande__c</fullName>
    <label>Type de demande</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nouvelle prestation</fullName>
                <default>true</default>
                <label>Nouvelle prestation</label>
            </value>
            <value>
                <fullName>Modification d&#39;une prestation existante</fullName>
            </value>
            <value>
                <fullName>Suppression d&#39;une prestation existante</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>