force-app/main/default/objects/Demande__c/recordTypes/Demande_de_d_sactivation_d_adresse.recordType-meta.xml
<RecordType>
    <fullName>Demande_de_d_sactivation_d_adresse</fullName>
    <active>true</active>
    <label>Demande de désactivation d&#39;adresse</label>
</RecordType>