force-app/main/default/objects/Demande__c/recordTypes/Demande_de_modification_d_une_facture.recordType-meta.xml
<RecordType>
    <fullName>Demande_de_modification_d_une_facture</fullName>
    <active>true</active>
    <label>Demande de modification d&#39;une facture</label>
</RecordType>