force-app/main/default/objects/Demande__c/validationRules/Statut_Abandonnee.validationRule-meta.xml
<ValidationRule>
    <fullName>Statut_Abandonnee</fullName>
    <active>true</active>
    <description>Une fois le statut Abandonnée atteint, le statut ne peut pas être changé</description>
    <errorConditionFormula>$User.Tech_By_Pass_VR__c = false &amp;&amp;


ISPICKVAL(PRIORVALUE(Statut__c),&quot;Abandonné&quot;) &amp;&amp;
ISCHANGED(Statut__c)</errorConditionFormula>
    <errorDisplayField>Statut__c</errorDisplayField>
    <errorMessage>Merci de ne plus changer le statut de cette demande une fois passé à &quot;Abandonnée&quot;</errorMessage>
</ValidationRule>