force-app/main/default/objects/Demande__c/validationRules/Statut_ConfirmeeparBiologistic.validationRule-meta.xml
<ValidationRule>
    <fullName>Statut_ConfirmeeparBiologistic</fullName>
    <active>true</active>
    <description>Une fois le statut Confirmée par Biologistic atteint, le statut ne peut pas être changé</description>
    <errorConditionFormula>$User.Tech_By_Pass_VR__c = false &amp;&amp; 


ISPICKVAL(PRIORVALUE(Statut__c),&quot;Confirmée par Biologistic&quot;) &amp;&amp; 
ISCHANGED(Statut__c)</errorConditionFormula>
    <errorDisplayField>Statut__c</errorDisplayField>
    <errorMessage>Merci de ne pas changer le statut une fois qu&#39;il est à l&#39;étape Confirmée par Biologistic</errorMessage>
</ValidationRule>