force-app/main/default/objects/Demande__c/validationRules/Statut_Repondu_par_Biologistic.validationRule-meta.xml
<ValidationRule>
    <fullName>Statut_Repondu_par_Biologistic</fullName>
    <active>true</active>
    <description>Le statut : &quot;Nouvelle&quot; ne peut passer qu&#39;au statut &quot;Envoyée à Biologistic&quot; ou &quot;Abandonnée&quot;.</description>
    <errorConditionFormula>ISPICKVAL(PRIORVALUE(Statut__c),&quot;Répondu/en attente de validation&quot;)&amp;&amp; ISCHANGED(Statut__c) &amp;&amp;

(ISPICKVAL (Statut__c,&quot;Nouvelle&quot;) ||
ISPICKVAL (Statut__c,&quot;Envoyée à Biologistic&quot;)  ||
ISPICKVAL(Statut__c, &quot;Confirmée par Biologistic&quot;))

&amp;&amp; $User.Tech_By_Pass_VR__c = false</errorConditionFormula>
    <errorMessage>Le statut : &quot;Nouvelle&quot; ne peut passer qu&#39;au statut &quot;Envoyée à Biologistic&quot; ou &quot;Abandonnée&quot;.</errorMessage>
</ValidationRule>