force-app/main/default/objects/Demande__c/validationRules/VR_DDE_Date_d_application_1er.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_DDE_Date_d_application_1er</fullName>
    <active>true</active>
    <errorConditionFormula>DAY( Debut_d_application_de_la_modification__c  ) &lt;&gt; 1 &amp;&amp; $User.Tech_By_Pass_VR__c =false</errorConditionFormula>
    <errorDisplayField>Debut_d_application_de_la_modification__c</errorDisplayField>
    <errorMessage>Merci de renseigner une date de début d&#39;application de la modification au 1er jour du mois.</errorMessage>
</ValidationRule>