force-app/main/default/objects/Demande__c/listViews/Mes_demandes_de_d_sactivation_d_adresse.listView-meta.xml
<ListView>
    <fullName>Mes_demandes_de_d_sactivation_d_adresse</fullName>
    <columns>NAME</columns>
    <columns>Statut__c</columns>
    <columns>Icone_Statut__c</columns>
    <columns>Proprietaire__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Demande__c.Demande_de_d_sactivation_d_adresse</value>
    </filters>
    <label>Mes demandes de désactivation d&#39;adresse</label>
</ListView>