force-app/main/default/objects/Demande__c/listViews/Mes_demandes_de_modification_de_compte.listView-meta.xml
<ListView>
    <fullName>Mes_demandes_de_modification_de_compte</fullName>
    <columns>NAME</columns>
    <columns>Statut__c</columns>
    <columns>Icone_Statut__c</columns>
    <columns>Proprietaire__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Demande__c.Demande_de_modification_d_une_facture</value>
    </filters>
    <label>Mes demandes de modification de facture</label>
</ListView>