force-app/main/default/objects/Demande__c/listViews/Mes_demandes_en_attente_d_approbation.listView-meta.xml
<ListView>
    <fullName>Mes_demandes_en_attente_d_approbation</fullName>
    <columns>NAME</columns>
    <columns>Client__c</columns>
    <columns>Statut__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Statut__c</field>
        <operation>equals</operation>
        <value>En attente d&#39;approbation</value>
    </filters>
    <label>Mes demandes en attente d&#39;approbation</label>
</ListView>